; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_type.c_RenameTypeAttributeStmtObjectAddress.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_type.c_RenameTypeAttributeStmtObjectAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i32 }

@InvalidOid = common dso_local global i32 0, align 4
@OBJECT_ATTRIBUTE = common dso_local global i64 0, align 8
@OBJECT_TYPE = common dso_local global i64 0, align 8
@TypeRelationId = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @RenameTypeAttributeStmtObjectAddress(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32* null, i32** %5, align 8
  %8 = load i32, i32* @InvalidOid, align 4
  store i32 %8, i32* %6, align 4
  store i32* null, i32** %7, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @OBJECT_ATTRIBUTE, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @Assert(i32 %14)
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @OBJECT_TYPE, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @Assert(i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 8
  %26 = call i32* @MakeTypeNameFromRangeVar(i32 %25)
  store i32* %26, i32** %5, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @LookupTypeNameOid(i32* null, i32* %27, i32 %28)
  store i32 %29, i32* %6, align 4
  %30 = call i32* @palloc0(i32 4)
  store i32* %30, i32** %7, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* @TypeRelationId, align 4
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @ObjectAddressSet(i32 %32, i32 %33, i32 %34)
  %36 = load i32*, i32** %7, align 8
  ret i32* %36
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32* @MakeTypeNameFromRangeVar(i32) #1

declare dso_local i32 @LookupTypeNameOid(i32*, i32*, i32) #1

declare dso_local i32* @palloc0(i32) #1

declare dso_local i32 @ObjectAddressSet(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
